<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/cdHombre"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardCornerRadius="50dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llcHombre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/selected"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:src="@drawable/baseline_male_24"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hombre"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="26sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cdMujer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardCornerRadius="50dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llcMujer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/unselected"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:src="@drawable/baseline_female_24"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mujer"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="26sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/selected"
            app:cardCornerRadius="50dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/altura"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/tvAltura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="26sp" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rsAltura"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="bottom"
                android:layout_margin="10dp"
                android:valueFrom="120"
                android:valueTo="200"
                android:stepSize="1"/>
        </androidx.cardview.widget.CardView>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/selected"
                app:cardCornerRadius="50dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/peso"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="26sp" />

                <TextView
                    android:id="@+id/tvPeso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text=""
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="26sp" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/butMinusPeso"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/baseline_remove_circle_24" />

                    <Button
                        android:id="@+id/butPlusPeso"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/baseline_add_circle_24" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/selected"
                app:cardCornerRadius="50dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edad"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="26sp" />

                <TextView
                    android:id="@+id/tvEdad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text=""
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="26sp" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/butMinusEdad"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/baseline_remove_circle_24" />

                    <Button
                        android:id="@+id/butPlusEdad"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/baseline_add_circle_24" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <RadioGroup
            android:id="@+id/rgComplex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rbDelgado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:text="@string/delgado"/>
            <RadioButton
                android:id="@+id/rbNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:text="@string/normal"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/rbAtletico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:text="@string/atletico"/>
            <RadioButton
                android:id="@+id/rbCorpulento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="@string/corpulento"/>
        </RadioGroup>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/butCalcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/purple"
            android:padding="20dp"
            android:text="@string/calcular"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="26sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</LinearLayout>